[tool.poetry]
name = "padeopsIO"
version = "0.1.0"
description = ""
authors = ["Kirby <kirby.heck@gmail.com>"]
license = "MIT"
packages = [{ include = "padeopsIO" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16"
scipy = ">=1.6"
matplotlib = ">=3.6"
jinja2 = "^3.1.5"
xarray = ">=0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
